<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_ic">

    </ImageView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="Sri Lanka Digital Transport System"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/edit_text_border_1"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#B4B2B2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border_1"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#B4B2B2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_btn_d1"
        android:drawableStart="@drawable/ic_send_24dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="Login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Not have an account? Sign up here"
        android:textSize="14sp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnReaderLogin"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_btn_reset_d2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_chrome_reader_24dp"
        android:padding="10dp"
        android:text="Reader Login" />

</LinearLayout>