...
        android:layout_marginTop="80dp"
        android:text="Reader Login"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editTextReaderID"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border_1"
        android:ems="10"
...
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#B4B2B2"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_btn_d1"
        android:drawableStart="@drawable/ic_send_24dp"
...
